# agent-config

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  repomix-output.xml
.github/workflows/: ci.yml  release.yml
docs/: SECURITY.md  path-contract-audit.md  support-matrix.md
docs/agents/: README.md  amp.md  antigravity.md  claude.md  cline.md  codebuddy.md  codex.md  copilot.md  crush.md  cursor.md  forge.md  gemini.md  hermes.md  iflow.md  junie.md  kilocode.md  openclaw.md  opencode.md  pi.md  qodercli.md  qwen.md  roo.md  tabnine.md  trae.md  windsurf.md
docs/research/: README.md
examples/: README.md  discover_capable_agents.rs  dry_run_plan.rs  gen_schema.rs  hooks_install_uninstall.rs  instruction_install.rs  mcp_install.rs  multi_consumer.rs  scopes_local_vs_global.rs  skill_install.rs
examples/tui_dry_run/: app.rs  main.rs  plan_runner.rs  specs.rs  ui.rs
schema/: agents.json
src/: error.rs  integration.rs  lib.rs  paths.rs  plan.rs  registry.rs  schema.rs  scope.rs  spec.rs  status.rs  validation.rs
src/agents/: amp.rs  antigravity.rs  claude.rs  cline.rs  codebuddy.rs  codex.rs  copilot.rs  crush.rs  cursor.rs  forge.rs  gemini.rs  hermes.rs  iflow.rs  junie.rs  kilocode.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs  planning.rs  prompt.rs  qodercli.rs  qwen.rs  roo.rs  (+3 more)
tests/: concurrency.rs  drift.rs  golden.rs  instruction_hook_collision.rs  instruction_registry.rs  mcp_registry.rs  plan_api.rs  registry.rs  schema_golden.rs  size_limit.rs  skill_registry.rs  status_registry.rs  symlink_safety.rs  validation.rs  windows_paths.rs
(+668 files in other folders)
