[package]
name = "ai-hooker"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Install hooks/integrations into AI coding harnesses (Claude Code, Cursor, Gemini CLI, OpenCode, Codex CLI, Cline, Windsurf, ...) without learning each one's filesystem layout."
repository = "https://github.com/whit3rabbit/ai-hooker"
keywords = ["ai", "hooks", "claude", "cursor", "cli"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".agents/",
    ".claude/",
    ".github/",
    ".mcp.json",
    ".synrepo/",
    ".syntext/",
    "AGENTS.md",
    "CLAUDE.md",
    "repomix-output.xml",
    "synrepo-context/",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
json5 = "1.3"
jsonc-parser = { version = "0.32.3", features = ["serde"] }
toml_edit = "0.22"
thiserror = "1"
anyhow = "1"
dirs = "5"
tempfile = "3"
yaml_serde = "0.10"
fluent-uri = "0.4"
sha2 = "0.10"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
